--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
